--- a/ISSpecs.html
+++ b/ISSpecs.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>                            
 <html>                                
-  <head>                                    
-    <meta charset="UTF-8">                                    
-    <title>ISSpecs</title>                                                                   
-  </head>                                
-  <body>
+<head>                                    
+<meta charset="UTF-8">                                    
+<title>ISSpecs</title>                                                                   
+</head>                                
+<body>
 <div>
 <h1 id="-">Разработчики</h1>
 <ul>
@@ -12,26 +12,36 @@
 <li>Неронов Роман </li>
 <li>Смолина Алина </li>
 <li>Менкеев Александр </li>
-<li>Ивашечкин Алексей <h1 id="-">Описание</h1>
-</li>
+<li>Ивашечкин Алексей </li>
+</ul>
+<h1 id="-">Описание</h1>
+<ul>
 <li>Разработать концепцию “Рабочего стола” с разработкой 5 пользовательских режимов с разными функциями. Пользовательские режимы: Разработчик, Соразработчик, Администратор [клиники, центра], Врач, Регистратура.</li>
 <li>Создать удобный и интуитивно понятный интерфейс.</li>
 <li>Автоматизировать передачу выбранных данных нейросети на “Рабочий стол”.</li>
-<li>Сделать страницу Входа, чтобы у каждого врача был свой профиль.<h2 id="-">Наименование</h2>
-Рабочий стол кардиохирурга<h2 id="-">Предметная область</h2>
-Врачи и сотрудники учреждений
-Пациенты
-Данные КТ<h1 id="-">Данные</h1>
+<li>Сделать страницу Входа, чтобы у каждого врача был свой профиль.</li>
+</ul>
+<h2 id="-">Наименование</h2>
+Рабочий стол кардиохирурга
+<h2 id="-">Предметная область</h2>
+<ul>
+<li>Врачи и сотрудники учреждений</li>
+<li>Пациенты</li>
+<li>Данные КТ</li>
+</ul>
+<h1 id="-">Данные</h1>
 <a href="https://app.quickdatabasediagrams.com/#/d/gM3Nav">https://app.quickdatabasediagrams.com/#/d/gM3Nav</a><h2 id="-">Общие ограничения целостности</h2>
 Разграничение доступа к удалению и добавлению сотрудников(только администратор может удалять и добавлять сотрудников)
-Разграничение доступа к удалению и добавлению пациентов(только врач и регистратура может удалять и добавлять пациентов)<h1 id="-">Пользовательские роли</h1>
-</li>
+Разграничение доступа к удалению и добавлению пациентов(только врач и регистратура может удалять и добавлять пациентов)
+<h1 id="-">Пользовательские роли</h1>
+<ul>
 <li>Разработчик</li>
 <li>Соразработчик</li>
 <li>Администратор</li>
 <li>Врач</li>
-<li>Регистратура<h2 id="-">Для каждой роли - наименование, ответственность, количество пользователей в этой роли?</h2>
-</li>
+<li>Регистратура</li>
+</ul>
+<h2 id="-">Для каждой роли - наименование, ответственность, количество пользователей в этой роли?</h2>
 <li>Разработчик - developer (возможность добавлять данные КТ (в формате DICOM), ЭХОКГ, антропометрии пациента, клинические данные и данные анамнеза пациент; возможность расширения функций соразработчиков и врачей/экспертов.)</li>
 <li>Соразработчик - codeveloper (Возможность вносить "сырые" данные КТ (в формате DICOM), ЭХОКГ, антропометрии пациента, клинические данные и данные анамнеза пациента.)</li>
 <li>Администратор - admin (функция добавления и регулирования деятельности профилей врачей/экспертов пределах учреждения (клиники/центра))</li>
@@ -54,11 +64,16 @@
 <h1 id="-">Технологии разработки</h1>
 <ul>
 <li>React</li>
-<li>Laravel<h2 id="-">Язык программирования</h2>
-</li>
+<li>Laravel</li>
+</ul>
+<h2 id="-">Язык программирования</h2>
+<ul>
 <li>Typescript</li>
-<li>PHP<h2 id="-">СУБД</h2>
-MySQL</li>
+<li>PHP</li>
+</ul>
+<h2 id="-">СУБД</h2>
+<ul>
+<li>MySQL</li>
 </ul>
 </div>
 </body>                            
